--- a/test/fixtures/simple_01.html
+++ b/test/fixtures/simple_01.html
@@ -1,6 +1,6 @@
 <div style="margin-left: 9px">
   <div style="position: relative; margin-right: 14px">
-    <div style="background: #000; height: 150px">
+    <div class="simple-01-inner" style="background: #000; height: 150px">
     </div>
   </div>
 </div>
